--- a/package.json
+++ b/package.json
@@ -8,12 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.43.5",
-    "autoprefixer": "10.4.16",
-    "postcss": "8.4.32",
-    "tailwindcss": "3.4.1",
-    "next": "14.0.2",
+    "next": "14.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.4.1"
   }
 }
