--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
   "dependencies": {
     "next": "14.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
     "tailwindcss": "3.4.1",
     "postcss": "8.4.31",
-    "autoprefixer": "10.4.15",
-    "@supabase/supabase-js": "2.40.0",
-    "framer-motion": "11.0.0"
+    "autoprefixer": "10.4.15"
   }
 }
-
