--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "devDependencies": {
     "tailwindcss": "3.4.1",
     "postcss": "8.4.31",
-    "autoprefixer": "10.4.15"
+    "autoprefixer": "10.4.15",
+    "typescript": "^5.6.3",
+    "@types/react": "^18.3.11",
+    "@types/node": "^20.17.10"
   }
 }
