--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "@supabase/supabase-js": "^2.0.0",
-    "@supabase/auth-helpers-nextjs": "^0.10.0"
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "tailwindcss": "3.4.1",
