--- a/package.json
+++ b/package.json
@@ -5,25 +5,22 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.1",
-    "date-fns": "^3.3.1",
-    "framer-motion": "^11.0.0",
-    "jspdf": "^2.5.2",
     "next": "14.0.0",
-    "qrcode": "^1.5.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "@supabase/supabase-js": "^2.0.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.0",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.6"
+    "tailwindcss": "3.4.1",
+    "postcss": "8.4.31",
+    "autoprefixer": "10.4.15",
+    "typescript": "^5.6.3",
+    "@types/react": "^18.3.11",
+    "@types/node": "^20.17.10"
   }
 }
