--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "build": "next build",
     "start": "next start"
   },
-  "dependencies": {
-    "next": "14.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@supabase/supabase-js": "^2.0.0",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "xlsx": "^0.18.5"
+  ""dependencies": {
+  "next": "14.0.0",
+  "react": "18.2.0",
+  "react-dom": "18.2.0",
+  "@supabase/supabase-js": "^2.0.0",
+  "@supabase/auth-helpers-nextjs": "^0.10.0",
+  "xlsx": "^0.18.5",
+  "transbank-sdk": "^<VERSION>"
+}"
   },
   "devDependencies": {
     "tailwindcss": "3.4.1",
