--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "@supabase/supabase-js": "^2.0.0",
   "@supabase/auth-helpers-nextjs": "^0.10.0",
   "xlsx": "^0.18.5",
-  "transbank-sdk": "^<VERSION>"
+  "transbank-sdk": "^<npm view transbank-sdk version>"
 }"
   },
   "devDependencies": {
