--- a/package.json
+++ b/package.json
@@ -7,22 +7,18 @@
     "build": "next build",
     "start": "next start"
   },
-  ""dependencies": {
-  "next": "14.0.0",
-  "react": "18.2.0",
-  "react-dom": "18.2.0",
-  "@supabase/supabase-js": "^2.0.0",
-  "@supabase/auth-helpers-nextjs": "^0.10.0",
-  "xlsx": "^0.18.5",
-  "transbank-sdk": "^<npm view transbank-sdk version>"
-}"
+  "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.0.0",
+    "next": "14.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "transbank-sdk": "^6.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "tailwindcss": "3.4.1",
-    "postcss": "8.4.31",
-    "autoprefixer": "10.4.15",
-    "typescript": "^5.6.3",
-    "@types/react": "^18.3.11",
-    "@types/node": "^20.17.10"
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3"
   }
 }
