--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.6.3",
+    "@types/react": "^18.3.0",
+    "@types/node": "^20.11.0"
   }
 }
+
