--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.0.0",
-    "next": "14.0.0",
+    "next": "^14.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "transbank-sdk": "^6.1.0",
