--- a/.gitignore
+++ b/.gitignore
@@ -1,51 +1,15 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# next.js
+# Next.js
 /.next/
 /out/
+/node_modules
 
-# production
-/build
-
-# misc
+# macOS
 .DS_Store
-*.pem
+._*
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
+# env
 .env*.local
 .env
 
 # vercel
 .vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-
-# macOS
-.DS_Store
-.AppleDouble
-.LSOverride
-._*
-
-# Windows
-Thumbs.db
-Desktop.ini
-
-# IDEs
-.vscode/*
-!.vscode/extensions.json
-.idea
