feat(sell): validar PDF PuntoTicket + QR y anti-duplicado\n\n- Backend (/api/tickets/register):\n  * Rechaza no-PDF y valida header %PDF\n  * Extrae texto con pdf-parse, bloquea escaneados (texto < 200 chars)\n  * Detecta proveedor PuntoTicket y parsea campos clave\n  * Valida QR (debe existir y contener ticket_number)\n  * Dedupe real por (provider, ticket_number) + por hash\n  * Inserta campos extendidos y retorna resumen para UI\n\n- Cliente (/sell/file):\n  * Lee QR en browser con pdfjs-dist + @zxing/browser\n  * Envia qr_payload al backend\n  * Banner de éxito y mini resumen + opción Reemplazar PDF\n\n- Confirm (/sell/confirm):\n  * Card informativa: pago 3-5 días hábiles + Wallet\n  * Fetch de perfil usa profiles.user_type (no role)\n\n- Publish API: usa profiles.user_type para fees\n\n- deps: pdf-parse, pdfjs-dist, @zxing/browser

--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "transbank-sdk": "^6.1.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^3.11.174",
+    "@zxing/browser": "^0.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
