--- a/package.json
+++ b/package.json
@@ -5,27 +5,29 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.0.0",
+    "@zxing/browser": "^0.1.3",
     "next": "^14.2.0",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^3.11.174",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "transbank-sdk": "^6.1.0",
-    "xlsx": "^0.18.5",
-    "pdf-parse": "^1.1.1",
-    "pdfjs-dist": "^3.11.174",
-    "@zxing/browser": "^0.1.3"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/node": "^20.11.0",
+    "@types/react": "^18.3.0",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.35",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.6.3",
-    "@types/react": "^18.3.0",
-    "@types/node": "^20.11.0"
+    "typescript": "^5.6.3"
   }
 }
-
