--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,24 @@
-# Next.js
-/.next/
-/out/
-/node_modules
-
-# macOS
+# Next.js / Node
+.next/
+out/
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 .DS_Store
-._*
 
-# env
-.env*.local
+# Vercel
+.vercel/
+
+# Env (secrets)
 .env
+.env.local
+.env.*
+!.env.local.example
 
-# vercel
-.vercel
-*.sql
+# Supabase (ruido local)
 supabase/.temp/
+
+# Allow explicit tracking
+!src/types/database.types.ts
