--- a/.env.local.example
+++ b/.env.local.example
@@ -2,3 +2,11 @@
 NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
+
+# Email
+RESEND_API_KEY=
+RESEND_FROM=
+SUPPORT_FROM_EMAIL=
+SUPPORT_EMAIL=
+SUPPORT_INBOX_EMAIL=
+NEXT_PUBLIC_SITE_URL=
